Adicionando o Email dos contatos

--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,7 @@ contato.html
 </head>
 <body>
    <h1>Contato</h1> 
+   <p> Entre em contato pelo e-mail lumagri@...</p>
    <script src="app.js"></script>
 </body>
 </html>
