--- a/contato.html
+++ b/contato.html
@@ -8,7 +8,7 @@ contato.html
     <title>Contato</title>
 </head>
 <body>
-   <h1>Contato</h1> 
+   <h1>E-mails de contato para serem inseridos</h1> 
    <script src="app.js"></script>
 </body>
 </html>
